--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "discord-kitty",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "A support project to teach nestJS on twitch",
+  "author": "Webeleon <contact@webeleon.dev>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Webeleon/Live-twitch-Discord-kitty"
+  },
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
