--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:create": "typeorm -f ormconfig.js migration:create -n",
+    "migration:run": "npm run build && typeorm -f ormconfig.js migration:run",
+    "migration:revert": "npm run build && typeorm -f ormconfig.js migration:revert -n"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
