--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@webeleon/nestjs-redis": "^0.0.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "discord.js": "^13.6.0",
